{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 302,
  "lineage": "8757e190-e62c-e649-9500-0960ff5480b3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:170558304176:security-group/sg-05493b9bd6bb304c4",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-05493b9bd6bb304c4",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "all_worker_management2022013009233712800000000a",
            "name_prefix": "all_worker_management",
            "owner_id": "170558304176",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b7091385333e5dff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:170558304176:security-group/sg-07f09ae65897b7c91",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-07f09ae65897b7c91",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_one2022013009233923820000000b",
            "name_prefix": "worker_group_mgmt_one",
            "owner_id": "170558304176",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b7091385333e5dff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:170558304176:security-group/sg-0b616a4f05f7050f9",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0b616a4f05f7050f9",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_two20220130092337127500000009",
            "name_prefix": "worker_group_mgmt_two",
            "owner_id": "170558304176",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b7091385333e5dff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:170558304176:security-group/sg-091d0a68fa4a850db",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-091d0a68fa4a850db",
            "ingress": [],
            "name": "choicesremake-eks-tNrclLto2022013009233944640000000c",
            "name_prefix": "choicesremake-eks-tNrclLto",
            "owner_id": "170558304176",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Production",
              "GithubOrg": "cryoelite",
              "GithubRepo": "ChoicesRemake-Backend",
              "Name": "choicesremake-eks-tNrclLto-eks_cluster_sg"
            },
            "tags_all": {
              "Environment": "Production",
              "GithubOrg": "cryoelite",
              "GithubRepo": "ChoicesRemake-Backend",
              "Name": "choicesremake-eks-tNrclLto-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7091385333e5dff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:170558304176:security-group/sg-0f2f99e696a7d4f66",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-0f2f99e696a7d4f66",
            "ingress": [],
            "name": "choicesremake-eks-tNrclLto2022013009233981160000000d",
            "name_prefix": "choicesremake-eks-tNrclLto",
            "owner_id": "170558304176",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Production",
              "GithubOrg": "cryoelite",
              "GithubRepo": "ChoicesRemake-Backend",
              "Name": "choicesremake-eks-tNrclLto-eks_worker_sg",
              "kubernetes.io/cluster/choicesremake-eks-tNrclLto": "owned"
            },
            "tags_all": {
              "Environment": "Production",
              "GithubOrg": "cryoelite",
              "GithubRepo": "ChoicesRemake-Backend",
              "Name": "choicesremake-eks-tNrclLto-eks_worker_sg",
              "kubernetes.io/cluster/choicesremake-eks-tNrclLto": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7091385333e5dff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-576804498",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-091d0a68fa4a850db",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-3390383211",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-091d0a68fa4a850db",
            "self": false,
            "source_security_group_id": "sg-0f2f99e696a7d4f66",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_primary_ingress_workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_private_access_cidrs_source",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_private_access_sg_source",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-3372297457",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f2f99e696a7d4f66",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-3282948765",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f2f99e696a7d4f66",
            "self": false,
            "source_security_group_id": "sg-091d0a68fa4a850db",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-752533197",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f2f99e696a7d4f66",
            "self": false,
            "source_security_group_id": "sg-091d0a68fa4a850db",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_kubelet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-665774590",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f2f99e696a7d4f66",
            "self": false,
            "source_security_group_id": "sg-0f2f99e696a7d4f66",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d9b4603b74e6fb45",
            "domain": "vpc",
            "id": "eipalloc-0d9b4603b74e6fb45",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-3-67-109-168.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.67.109.168",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "choicesremake-vpc-eu-central-1a",
              "kubernetes.io/cluster/choicesremake-eks-tNrclLto": "shared"
            },
            "tags_all": {
              "Name": "choicesremake-vpc-eu-central-1a",
              "kubernetes.io/cluster/choicesremake-eks-tNrclLto": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:170558304176:internet-gateway/igw-0eef30071a160ef04",
            "id": "igw-0eef30071a160ef04",
            "owner_id": "170558304176",
            "tags": {
              "Name": "choicesremake-vpc",
              "kubernetes.io/cluster/choicesremake-eks-tNrclLto": "shared"
            },
            "tags_all": {
              "Name": "choicesremake-vpc",
              "kubernetes.io/cluster/choicesremake-eks-tNrclLto": "shared"
            },
            "vpc_id": "vpc-0b7091385333e5dff"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d9b4603b74e6fb45",
            "connectivity_type": "public",
            "id": "nat-094c1bcb18cc1e053",
            "network_interface_id": "eni-01b0bc9cfe6e19444",
            "private_ip": "10.0.4.173",
            "public_ip": "3.67.109.168",
            "subnet_id": "subnet-05d95967dcddeae74",
            "tags": {
              "Name": "choicesremake-vpc-eu-central-1a",
              "kubernetes.io/cluster/choicesremake-eks-tNrclLto": "shared"
            },
            "tags_all": {
              "Name": "choicesremake-vpc-eu-central-1a",
              "kubernetes.io/cluster/choicesremake-eks-tNrclLto": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00aa242a1401c65f91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-094c1bcb18cc1e053",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00aa242a1401c65f9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0eef30071a160ef04",
            "id": "r-rtb-07942bba3bca3da8d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07942bba3bca3da8d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:170558304176:route-table/rtb-00aa242a1401c65f9",
            "id": "rtb-00aa242a1401c65f9",
            "owner_id": "170558304176",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "choicesremake-vpc-private",
              "kubernetes.io/cluster/choicesremake-eks-tNrclLto": "shared"
            },
            "tags_all": {
              "Name": "choicesremake-vpc-private",
              "kubernetes.io/cluster/choicesremake-eks-tNrclLto": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7091385333e5dff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:170558304176:route-table/rtb-07942bba3bca3da8d",
            "id": "rtb-07942bba3bca3da8d",
            "owner_id": "170558304176",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "choicesremake-vpc-public",
              "kubernetes.io/cluster/choicesremake-eks-tNrclLto": "shared"
            },
            "tags_all": {
              "Name": "choicesremake-vpc-public",
              "kubernetes.io/cluster/choicesremake-eks-tNrclLto": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7091385333e5dff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c767ff33359a1d5",
            "route_table_id": "rtb-00aa242a1401c65f9",
            "subnet_id": "subnet-015070ccdc4612d71"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7a40f208c86c506",
            "route_table_id": "rtb-00aa242a1401c65f9",
            "subnet_id": "subnet-0c9567f163cab5388"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c274fb5e9f3ece4",
            "route_table_id": "rtb-00aa242a1401c65f9",
            "subnet_id": "subnet-0cd74347d86b8eb9f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e11cecbbd7cf988f",
            "route_table_id": "rtb-07942bba3bca3da8d",
            "subnet_id": "subnet-05d95967dcddeae74"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ddb8c57b1dcd149",
            "route_table_id": "rtb-07942bba3bca3da8d",
            "subnet_id": "subnet-0c11958227685dfc2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0286b7e5317679853",
            "route_table_id": "rtb-07942bba3bca3da8d",
            "subnet_id": "subnet-01ac085576f90b0b0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:170558304176:subnet/subnet-015070ccdc4612d71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-015070ccdc4612d71",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "170558304176",
            "tags": {
              "Name": "choicesremake-vpc-private-eu-central-1a",
              "kubernetes.io/cluster/choicesremake-eks-tNrclLto": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "choicesremake-vpc-private-eu-central-1a",
              "kubernetes.io/cluster/choicesremake-eks-tNrclLto": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b7091385333e5dff"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:170558304176:subnet/subnet-0c9567f163cab5388",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0c9567f163cab5388",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "170558304176",
            "tags": {
              "Name": "choicesremake-vpc-private-eu-central-1b",
              "kubernetes.io/cluster/choicesremake-eks-tNrclLto": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "choicesremake-vpc-private-eu-central-1b",
              "kubernetes.io/cluster/choicesremake-eks-tNrclLto": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b7091385333e5dff"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:170558304176:subnet/subnet-0cd74347d86b8eb9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0cd74347d86b8eb9f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "170558304176",
            "tags": {
              "Name": "choicesremake-vpc-private-eu-central-1c",
              "kubernetes.io/cluster/choicesremake-eks-tNrclLto": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "choicesremake-vpc-private-eu-central-1c",
              "kubernetes.io/cluster/choicesremake-eks-tNrclLto": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b7091385333e5dff"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:170558304176:subnet/subnet-05d95967dcddeae74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-05d95967dcddeae74",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "170558304176",
            "tags": {
              "Name": "choicesremake-vpc-public-eu-central-1a",
              "kubernetes.io/cluster/choicesremake-eks-tNrclLto": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "choicesremake-vpc-public-eu-central-1a",
              "kubernetes.io/cluster/choicesremake-eks-tNrclLto": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b7091385333e5dff"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:170558304176:subnet/subnet-0c11958227685dfc2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0c11958227685dfc2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "170558304176",
            "tags": {
              "Name": "choicesremake-vpc-public-eu-central-1b",
              "kubernetes.io/cluster/choicesremake-eks-tNrclLto": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "choicesremake-vpc-public-eu-central-1b",
              "kubernetes.io/cluster/choicesremake-eks-tNrclLto": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b7091385333e5dff"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:170558304176:subnet/subnet-01ac085576f90b0b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-01ac085576f90b0b0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "170558304176",
            "tags": {
              "Name": "choicesremake-vpc-public-eu-central-1c",
              "kubernetes.io/cluster/choicesremake-eks-tNrclLto": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "choicesremake-vpc-public-eu-central-1c",
              "kubernetes.io/cluster/choicesremake-eks-tNrclLto": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b7091385333e5dff"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:170558304176:vpc/vpc-0b7091385333e5dff",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a1b114174c700952",
            "default_route_table_id": "rtb-089071f2b3e232692",
            "default_security_group_id": "sg-0cd735d42984a1980",
            "dhcp_options_id": "dopt-0e9aa3ca0bd4c003b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b7091385333e5dff",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-089071f2b3e232692",
            "owner_id": "170558304176",
            "tags": {
              "Name": "choicesremake-vpc",
              "kubernetes.io/cluster/choicesremake-eks-tNrclLto": "shared"
            },
            "tags_all": {
              "Name": "choicesremake-vpc",
              "kubernetes.io/cluster/choicesremake-eks-tNrclLto": "shared"
            }
          },
          "dependencies": [
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}